[build-system]
requires = ["setuptools"]

[project]
name = "oteclm"
version = "0.1"
description = "treatment of failure probabilities and dependencies in highly redundant systems"
readme = "README.rst"
dependencies = ["openturns", "tqdm"]
authors = [
  {name = "Anne Dutfoy"},
]
license = {text= "LGPL-3.0-or-later"}

[tool.setuptools]
packages = ["oteclm"]

[project.optional-dependencies]
doc = ["numpydoc", "sphinx-gallery", "sphinx", "matplotlib"]
test = ["pytest"]
